--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -72,12 +72,7 @@
     "\n",
     "inventory = products_in_the_store(products)\n",
     "print(\"Amount of items:\")\n",
-    "print(inventory)\n",
-    "\n",
-    "\n",
-    "# print(\"Amount of items:\")\n",
-    "# for product, quantity in invetory.items():\n",
-    "#     print(f\"{product}: {quantity}\")\n"
+    "print(inventory)\n"
    ]
   },
   {
@@ -123,16 +118,7 @@
     "        print(f\"{product} is not available in the inventory\")\n",
     "\n",
     "print(\"Updated inventory: \") \n",
-    "print(inventory)   \n",
-    "# for product, quantity in inventory.items():\n",
-    "#     print(f\"{product}: {quantity}\")\n",
-    "    \n",
-    "\n",
-    "# products_orders1 = input('1st from 3 products that you want to order: ')\n",
-    "# products_orders2 = input('2nd from 3 products that you want to order: ')\n",
-    "# products_orders3 = input('3rd from 3 products that you want to order: ')\n",
-    "# customer_orders = {products_orders1, products_orders2, products_orders3}\n",
-    "# customer_orders"
+    "print(inventory)   "
    ]
   },
   {
@@ -161,10 +147,7 @@
      ]
     }
    ],
-   "source": [
-    "percentage_products_ordered = (100*len(customer_orders))/(total_products)\n",
-    "print(percentage_products_ordered)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,9 +155,7 @@
    "id": "28ce7f10",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "order_status = (total_products_ordered, percentage_products_ordered)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
