--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "47d49845",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "Amount of items:\n",
-      "{'t-shirt': 4, 'mug': 5, 'hat': 6, 'book': 7, 'keychain': 8}\n"
+      "{'t-shirt': 1, 'mug': 2, 'hat': 3, 'book': 4, 'keychain': 5}\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "560cdab4",
    "metadata": {},
    "outputs": [
@@ -85,9 +85,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Produts ordered:  {'keychain', 'book', 'hat', 't-shirt', 'mug'}\n",
+      "Produts ordered:  {'book', 't-shirt', 'mug'}\n",
       "Updated inventory: \n",
-      "{'t-shirt': 3, 'mug': 4, 'hat': 5, 'book': 6, 'keychain': 7}\n"
+      "{'t-shirt': 0, 'mug': 1, 'hat': 3, 'book': 3, 'keychain': 5}\n"
      ]
     }
    ],
@@ -120,49 +120,6 @@
     "print(\"Updated inventory: \") \n",
     "print(inventory)   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5299132",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "f6790a26",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'total_products' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/amandabrognolidonini/Desktop/[Ironhack]/lab-python-flow-control/lab-python-flow-control.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/amandabrognolidonini/Desktop/%5BIronhack%5D/lab-python-flow-control/lab-python-flow-control.ipynb#ch0000005?line=0'>1</a>\u001b[0m percentage_products_ordered \u001b[39m=\u001b[39m (\u001b[39m100\u001b[39m\u001b[39m*\u001b[39m\u001b[39mlen\u001b[39m(customer_orders))\u001b[39m/\u001b[39m(total_products)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandabrognolidonini/Desktop/%5BIronhack%5D/lab-python-flow-control/lab-python-flow-control.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(percentage_products_ordered)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'total_products' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28ce7f10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
